# DReader

./: .gitignore  CLAUDE.md  CODE_REVIEW.md  IMPLEMENTATION_PLAN.md  README.md  SSH_TEST.md  config.json  pyproject.toml  session-summary.md  setup-windows.ps1
.beads/: PRIME.md  config.yaml  issues.jsonl
.claude/: settings.json
.claude/rules/: zgent-permissions.md
.runtime/: namepool-state.json  refinery.json  witness.json
docs/: CODE_REVIEW.md  IMPLEMENTATION_PLAN.md  python-project-setup.md
scripts/: run_retrieval.bat
src/: basic_bot.py  testdiscord.py
src/api/: index.ts
src/api/routes/: scrape.ts
src/cli/: auth-setup.ts  db-reset.ts  init-db.ts  validate-config.ts
src/domain/scrape-engine/: APIScrapeOrchestrator.ts  MessageScroller.ts  ScrapeOrchestrator.ts
src/logging/: logger.ts
src/logging/__tests__/: logger.test.ts
src/retrieval/: __init__.py  clipboard.py  config.py  errors.py  keyboard.py  logger.py  metadata.py  models.py  run.py  session.py  window.py
witness/: state.json
